k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: NodePort
  selector:
    app: fastapi-app
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 32005  # Choose a port in 30000-32767
